@@ -68,6 +68,9 @@ VERSION    = $(shell cat RELEASE)
 USER       = munin
 GROUP      = munin
 
+# Default user to run the plugins as
+PLUGINUSER = nobody
+
 # Which command to use to check if the USER and GROUP to run Munin as, exists.
 GETENT = $(shell which getent || which true 2>/dev/null)
 CHECKUSER  = $(shell $(GETENT) passwd $(USER) >/dev/null 2>/dev/null || (echo "echo User $(USER) nonexistant. Create the user and retry; exit 2"))
